--- a/BusDriveApp/app/theme/app.core.scss
+++ b/BusDriveApp/app/theme/app.core.scss
@@ -8,6 +8,7 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import '../pages/home/home';
+@import "../pages/map/map";
 
 .tabs-page .back-button {
     display: inline-block;
