#11: navbar, tabs, background colors updated

--- a/BusDriveApp/app/theme/app.variables.scss
+++ b/BusDriveApp/app/theme/app.variables.scss
@@ -38,3 +38,6 @@ $colors: (
         dark: #222,
         favorite: #69BB7B
 );
+
+$background-color: color($colors, neutralgrey);
+//$list-background-color: red;
