#11 drive screen buttons fixed. add e.g. @import '../pages/drive/drive'; to app.core.scss file to include style sheets!

--- a/BusDriveApp/app/pages/drive/drive.scss
+++ b/BusDriveApp/app/pages/drive/drive.scss
@@ -1,3 +1,11 @@
 .drive {
-
+   .buttonleft{
+      padding-right:50px;
+   }
+   .buttonright{
+       padding-left:50px;
+   }
+   .text{
+       text-align:center;
+   }
 }
