--- a/BusDriveApp/app/theme/app.core.scss
+++ b/BusDriveApp/app/theme/app.core.scss
@@ -9,6 +9,7 @@
 
 @import '../pages/home/home';
 @import "../pages/map/map";
+@import "../pages/drive/drive";
 
 .tabs-page .back-button {
     display: inline-block;
