#11 change background-color to lightgrey

--- a/BusDriveApp/app/theme/app.variables.scss
+++ b/BusDriveApp/app/theme/app.variables.scss
@@ -39,5 +39,5 @@ $colors: (
         favorite: #69BB7B
 );
 
-$background-color: color($colors, neutralgrey);
+$background-color: color($colors, lightgrey);
 //$list-background-color: red;
