#11 changed language dependent text to variables

--- a/BusDriveApp/app/pages/stops/stops.scss
+++ b/BusDriveApp/app/pages/stops/stops.scss
@@ -1,3 +1,10 @@
 .stops {
-
+    overflow: auto;
+} 
+.item{    
+    .p{
+        
+        font-weight: bold;
+        font-size: 100px;
+    }
 }
