--- a/BusDriveApp/app/theme/app.core.scss
+++ b/BusDriveApp/app/theme/app.core.scss
@@ -10,6 +10,7 @@
 @import '../pages/home/home';
 @import "../pages/map/map";
 @import "../pages/drive/drive";
+@import "../pages/stops/stops";
 
 .tabs-page .back-button {
     display: inline-block;
