--- a/BusDriveApp/app/components/about/about.html
+++ b/BusDriveApp/app/components/about/about.html
@@ -24,8 +24,8 @@
                             YouTube
                     </button>
                     <button ion-item (click)="openURL('http://www.digitale-doerfer.de')">
-                        <ion-icon name="logo-chrome" item-left></ion-icon>
-                            Internet
+                        <ion-icon name="globe" item-left></ion-icon>
+                            WWW
                     </button>
                 </ion-list>
             </ion-card>
