#38 Added a Licence and changed the emailadress

--- a/BusDriveApp/app/components/about/about.html
+++ b/BusDriveApp/app/components/about/about.html
@@ -33,9 +33,9 @@
         <ion-item>
             <div class="version"> Ihre Meinung </div>
             <ion-card>
-                <button ion-item (click)="mailto('steffen.hess@iese.fraunhofer.de')">
+                <button ion-item (click)="mailto('gseprojekt3@informatik.uni-kl.de')">
                         <ion-icon name="mail" item-left></ion-icon>
-                            Feedback an DigitaleDörfer
+                             E-Mail
                 </button>
             </ion-card>
         </ion-item>
