--- a/BusDriveApp/app/components/setting/setting.html
+++ b/BusDriveApp/app/components/setting/setting.html
@@ -5,11 +5,11 @@
   <ion-title>Settings</ion-title>
 </ion-navbar>
 
-<ion-content>  
-<ion-list>
+<ion-content>
+  <ion-list>
     <ion-item>
       <ion-label>Sprache</ion-label>
-      <ion-select [(ngModel)]="lang" (change)="changeLanguage(lang)">
+      <ion-select [(ngModel)]="lang" (ngModelChange)="changeLanguage(lang)" okText="Ok" cancelText="Abbruch">
         <ion-option value="en">English</ion-option>
         <ion-option value="de">Deutsch</ion-option>
       </ion-select>
@@ -21,16 +21,15 @@
         <ion-option value="ger">Deutsch</ion-option>
       </ion-select>
     </ion-item>
- </ion-list>
+  </ion-list>
 
 
 
 
 
-</ion-content>  
-<button class="languageButton" (click)="changeLanguage()"> {{buttontext}} </button>
-   <ion-item>
-    <ion-label>New Server URL: </ion-label>
-    <ion-input [(ngModel)]="serverURL" type="url" id="serverURL" >{{serverURL}}</ion-input>
-  </ion-item>     
-   <button (click)="setServerURL(serverURL)">Set data</button>
+</ion-content>
+<ion-item>
+  <ion-label>New Server URL: </ion-label>
+  <ion-input [(ngModel)]="serverURL" type="url" id="serverURL">{{serverURL}}</ion-input>
+</ion-item>
+<button (click)="setServerURL(serverURL)">Set data</button>
