#38 : small changes because of AppAvailability

--- a/BusDriveApp/app/components/about/about.html
+++ b/BusDriveApp/app/components/about/about.html
@@ -11,7 +11,7 @@
             <div class="platform"> {{findUs}} </div>
             <ion-card>
                 <ion-list>
-                    <button ion-item (click)="openFacebook('DigitaleDoerfer')">
+                    <button ion-item (click)="openFacebook('912830465460833')">
                         <ion-icon name="logo-facebook" item-left></ion-icon>
                             Facebook
                     </button>
