--- a/BusDriveApp/app/components/about/about.html
+++ b/BusDriveApp/app/components/about/about.html
@@ -2,7 +2,7 @@
     <button menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
-    <ion-title>About</ion-title>
+    <ion-title>{{aboutTrans}}</ion-title>
 </ion-navbar>
 
 <ion-content class="about">
