--- a/BusDriveApp/app/components/about/about.html
+++ b/BusDriveApp/app/components/about/about.html
@@ -53,7 +53,7 @@
                     </button>
                     <button ion-item (click)="openLicense()">
                         <ion-icon name="information" item-left></ion-icon>
-                            {{licence}}
+                            {{license}}
                     </button>
                 </ion-list>
             </ion-card>
