#38 : small changes ( fixes the problem with menu language ) #27 : some changes and added GUI flow
new APK, fix TestServer,
reviewer needed for diagram

--- a/BusDriveApp/app/components/about/about.html
+++ b/BusDriveApp/app/components/about/about.html
@@ -15,11 +15,11 @@
                         <ion-icon name="logo-facebook" item-left></ion-icon>
                             Facebook
                     </button>
-                    <button ion-item (click)="openTwitter('twitter.com/digitaledoerfer')">
+                    <button ion-item (click)="openTwitter('https://twitter.com/digitaledoerfer')">
                         <ion-icon name="logo-twitter" item-left></ion-icon>
                             Twitter
                     </button>
-                    <button ion-item (click)="openYouTube('UC2z1kArBgoEwZ1I0oRfzt8Q')">
+                    <button ion-item (click)="openYouTube('https://www.youtube.com/channel/UC2z1kArBgoEwZ1I0oRfzt8Q')">
                         <ion-icon name="logo-youtube" item-left></ion-icon>
                             YouTube
                     </button>
