#52 changed GUI and changed request interval

--- a/BusDriveApp/app/pages/drive/drive.scss
+++ b/BusDriveApp/app/pages/drive/drive.scss
@@ -1,11 +1,17 @@
 .drive {
-   .buttonleft{
-      padding-right:50px;
-   }
-   .buttonright{
-       padding-left:50px;
-   }
+    .buttonleft{
+       padding-left:25px;       
+    }
+    .buttonright{
+        padding-right:25px;
+        
+    }
    .text{
        text-align:center;
    }
+  .button_drive{
+    width: 56px;
+    hight: 56px;
+  }
+
 }
