#54 : prevent app from sleeping while in background

--- a/BusDriveApp/app/components/setting/setting.html
+++ b/BusDriveApp/app/components/setting/setting.html
@@ -32,6 +32,10 @@
       </ion-item-options>
     </ion-item-sliding>
     <ion-item>
+      <ion-label>BackgroundMode</ion-label>
+      <ion-toggle [(ngModel)]="mode" (ngModelChange)="changeBackgroundMode(mode)"></ion-toggle>
+    </ion-item>
+    <ion-item>
       <ion-label>Prevent sleeping</ion-label>
       <ion-toggle [(ngModel)]="insomnia" (ngModelChange)="changeInsomnia(insomnia)"></ion-toggle>
     </ion-item>
