--- a/BusDriveApp/app/components/setting/setting.html
+++ b/BusDriveApp/app/components/setting/setting.html
@@ -9,28 +9,31 @@
   <ion-list>
     <ion-item>
       <ion-label>{{langTrans}}</ion-label>
-      <ion-select [(ngModel)]="lang" (ngModelChange)="changeLanguage(lang)" okText="Ok" cancelText={{cancelAlert}}>
+      <ion-select interface=action-sheet [(ngModel)]="lang" (ngModelChange)="changeLanguage(lang)" okText="Ok" cancelText={{cancelAlert}}>
         <ion-option value="en">English</ion-option>
         <ion-option value="de">Deutsch</ion-option>
       </ion-select>
     </ion-item>
     <ion-item>
       <ion-label>{{serverAdressTrans}}</ion-label>
-      <ion-select [(ngModel)]="serverURL" (ngModelChange)="setServerURL(serverURL)" okText="Ok" cancelText={{cancelAlert}}>
+      <ion-select interface=action-sheet [(ngModel)]="serverURL" (ngModelChange)="setServerURL(serverURL)" okText="Ok" cancelText={{cancelAlert}}>
         <ion-option *ngFor="let url of serverURLList" value="{{url}}">{{url}}</ion-option>
       </ion-select>
     </ion-item>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>{{newServerAdressTrans}}</ion-label>
-        <ion-input [(ngModel)]="url" type="url" id="serverURL">{{serverURL}}</ion-input>
-      </ion-item>
-      <ion-item-options>
-        <button (click)="addToServerURLList(url)">
+    <ion-item>
+      <ion-label>{{newServerAdressTrans}}</ion-label>
+      <ion-input [(ngModel)]="url" type="url" id="serverURL">{{serverURL}}</ion-input>
+    </ion-item>
+    <ion-item>
+      <button large class="button button-block" (click)="addToServerURLList(url)">
         <ion-icon name="add"></ion-icon>
       </button>
-      </ion-item-options>
-    </ion-item-sliding>
+      </ion-item>
+      <ion-item>
+      <button large class="button button-block" (click)="clearServerURLList()">
+        <ion-icon name="trash"></ion-icon>
+      </button>
+      </ion-item>
     <ion-item>
       <ion-label>BackgroundMode</ion-label>
       <ion-toggle [(ngModel)]="mode" (ngModelChange)="changeBackgroundMode(mode)"></ion-toggle>
